v1.0.3.1: add support for bartMachine v1.4